--- a/scss/mobile/_login.scss
+++ b/scss/mobile/_login.scss
@@ -4,7 +4,7 @@
   button {
     display: block;
     margin-right: 0;
-    margin-bottom: ($modal-inner-spacer-y / 2);
+    margin-bottom: ($modal-inner-spacer-y * 0.5);
     width: 100%;
 
     &:last-child {
