--- a/scss/common/_notification.scss
+++ b/scss/common/_notification.scss
@@ -7,8 +7,8 @@
 
   .close {
     font-size: inherit;
-    top: ($card-padding-y / 2);
-    right: ($card-padding-x / 2);
+    top: ($card-padding-y * 0.5);
+    right: ($card-padding-x * 0.5);
   }
 }
 
