--- a/scss/common/_topic-list-category.scss
+++ b/scss/common/_topic-list-category.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .aspect-image.category-logo {
   margin: $spacer-sm $spacer-sm 0 0;
 }
@@ -20,7 +22,7 @@
   .topic-list {
     .more-topics {
       td {
-        padding-right: ($tbody-cell-padding-x * 2 - $btn-padding-x / 2);
+        padding-right: ($tbody-cell-padding-x * 2 - $btn-padding-x * 0.5);
       }
 
       .btn {
@@ -36,7 +38,7 @@
 
 .category-boxes,
 .category-boxes-with-topics {
-  margin: 0 ($spacer-x / -2) ($spacer-lg - $spacer-y);
+  margin: 0 math.div($spacer-x, -2) ($spacer-lg - $spacer-y);
   width: auto;
 
   h3 {
@@ -49,7 +51,7 @@
   .category-box {
     border-radius: $card-border-radius 0 0 $card-border-radius;
     border-left-width: 2px;
-    margin: 0 ($spacer-x / 2) $spacer-y;
+    margin: 0 ($spacer-x * 0.5) $spacer-y;
     width: calc(33.333333% - #{$spacer-x});
   }
 
