--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 #bulk-select {
   background-color: transparent;
   padding: 0;
@@ -46,7 +48,7 @@
 
     .d-icon {
       color: inherit;
-      margin: 0 ($spacer-xs / -2) 0 $spacer-xs;
+      margin: 0 math.div($spacer-xs, -2) 0 $spacer-xs;
       vertical-align: top;
     }
   }
@@ -73,7 +75,7 @@
     border-bottom: $table-border-width solid color-chooser($table-border-color-dark, $table-border-color-light);
     border-radius: 0;
     box-shadow: none;
-    padding: (($thead-cell-height - $font-size-base * $line-height-base) / 2) ($thead-cell-padding-x * 2);
+    padding: (($thead-cell-height - $font-size-base * $line-height-base) * 0.5) ($thead-cell-padding-x * 2);
   }
 
   .top-lists {
@@ -374,9 +376,9 @@
 
     > a {
       display: block;
-      margin-top: ($spacer-y-inline / 2);
+      margin-top: ($spacer-y-inline * 0.5);
       margin-right: $spacer-x-inline;
-      margin-bottom: ($spacer-y-inline / 2);
+      margin-bottom: ($spacer-y-inline * 0.5);
     }
   }
 
@@ -413,7 +415,7 @@
         background-color: color-chooser($table-bg-dark, $table-bg-light);
         color: unquote('$tertiary');
         font-size: inherit;
-        padding: 0 ($tbody-cell-padding-x / 2);
+        padding: 0 ($tbody-cell-padding-x * 0.5);
       }
     }
   }
@@ -447,9 +449,9 @@
 }
 
 .topic-thumbnail {
-  padding-top: (($font-size-base * $line-height-base - $font-size-base) / 2);
+  padding-top: (($font-size-base * $line-height-base - $font-size-base) * 0.5);
   padding-right: $tbody-cell-padding-x;
-  padding-bottom: (($font-size-base * $line-height-base - $font-size-base) / 2);
+  padding-bottom: (($font-size-base * $line-height-base - $font-size-base) * 0.5);
 
   .thumbnail {
     border-radius: $table-border-radius;
